# dns-update

./: .editorconfig  .env-dist  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Makefile  README.md  devbox.json
.github/release/: package-lock.json  package.json
.github/workflows/: ci.yml  commit-lint.yml  release.yml
src/: config.rs  dns_client.rs  dns_monitor.rs  docker_monitor.rs  error.rs  main.rs  onepassword.rs  registry.rs  system_monitor.rs
src/auth/: credentials.rs
src/core/: mod.rs  provider.rs  record.rs  registry.rs
src/providers/: mod.rs
src/providers/nextdns/: client.rs  error.rs  mod.rs  tests.rs  types.rs
tests/fixtures/: secret.key
