[package]
name = "dns-rewrite"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
reqwest = { version = "0.12.20", default-features = false, features = ["json", "cookies", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }

[dev-dependencies]
assert_matches = "1.5.0"
httpmock = "0.7.0"
mockall = "0.13.1"
tokio-test = "0.4.4"
